Se añade objeto Kirby y se muestra en html

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     
 </head>
 <body>
+    <section class="articulos"></section>
+
     <script src="./assets/js/main.js"></script>
 </body>
 </html>
