--- a/index.html
+++ b/index.html
@@ -12,8 +12,25 @@
     
 </head>
 <body>
-    <section class="articulos"></section>
 
+    <table>
+        <thead>
+        <tr>
+        <th>N°</th>
+        <th>Propietario</th>
+        <th>Número de contacto</th>
+        </tr>
+        </thead>
+        <tbody></tbody>
+        </table>
+
+    <section class="tarjeta"></section>
+    <hr>
+    <section class="articulos"></section>
+    <hr>
+    <section class="preciosS"></section>
+    <hr>
+    <section class="productos"></section>
     <script src="./assets/js/main.js"></script>
 </body>
 </html>
